[gd_scene load_steps=2 format=3 uid="uid://ddgp4s835ohy5"]

[ext_resource type="Script" path="res://Scenes/MultiplayerManager/multiplayer_manager.gd" id="1_6i3uk"]

[node name="MultiplayerManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6i3uk")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.231491, 0.23031, 0.434139, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.5
offset_right = 150.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="HostGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="Start Game" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[connection signal="pressed" from="VBoxContainer/HostGame" to="." method="_on_host_game_pressed"]
[connection signal="pressed" from="VBoxContainer/JoinGame" to="." method="_on_join_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Start Game" to="." method="_on_start_game_pressed"]
